Fix mobile header visibility in topnav SCSS
Corrected SCSS logic so header is visible at mobile widths.
No breaking changes. Closes issue with hidden header on mobile.

--- a/src/scss/C-components/_topnav.scss
+++ b/src/scss/C-components/_topnav.scss
@@ -158,6 +158,10 @@
     // .topnav__close: <button> close menu button
     background: none;
 
+    @include m.breakpoint('700') {
+      display: none;
+    }
+    
     // FontAwesome icon sizing for navigation buttons
     .fa-solid {
       font-size: f.rem(24); // 1.5rem equivalent
@@ -165,7 +169,7 @@
     }
   }
 
-  &,
+  // &,
   &__menu {
     // .topnav__menu: <div> navigation menu container
     background-color: var(--primary-bg);
